# ros_pomdp

./: LICENSE  README.md
src/: .gitignore
src/pomdp/: CMakeLists.txt  package.xml  setup.py
src/pomdp/doc/: feature_space.dox  mainpage.dox  rosdoc.yaml
src/pomdp/include/: alpha_policy.h  assert_math.h  assert_rng.h  assert_type.h  belief_feature_value.h  compound_policy.h  empty_mdp.h  feature.h  feature_space.h  feature_space_factory.h  feature_value.h  feature_vector.h  map_policy.h  mdp.h  mdp_factory.h  mdp_policy.h  mdp_util.h  multinomial_policy.h  policy.h  policy_factory.h  pomdp.h  pomdp_io.h  pomdp_policy.h  pretty.h  simple_feature_space.h  simple_feature_value.h  vector_feature_space.h
src/pomdp/src/: alpha_policy.cpp  belief_feature_value.cpp  empty_mdp.cpp  feature.cpp  feature_space_factory.cpp  feature_vector.cpp  map_policy.cpp  mdp.cpp  mdp_factory.cpp  mdp_util.c  multinomial_policy.cpp  policy.cpp  policy_factory.cpp  pomdp.cpp  pomdp_io.cpp  pretty.cpp  simple_feature_space.cpp  simple_feature_value.cpp  vector_feature_space.cpp
src/pomdp/src/pomdp/: __init__.py  feature_space.py  feature_unifier.py
src/pomdp/test/: 4x3.95.bogus.mdp_policy  dummy.mdp_policy  feature_vector.yaml  test_alpha_policy.cpp  test_feature_space.cpp  test_feature_space.py  test_map_policy.cpp  test_pomdp.cpp  test_pretty.cpp  test_stochastic_policies.cpp
src/pomdp_node/: CMakeLists.txt  package.xml  setup.py
src/pomdp_node/doc/: .gitignore  mainpage.dox  oracle_policies.dox  rosdoc.yaml
src/pomdp_node/launch/: dialogue_irl.launch
src/pomdp_node/msg/: action.msg  model_output.msg  model_outputs.msg  observation.msg
src/pomdp_node/scripts/: pomdp_viewer.py
src/pomdp_node/src/: bag_of_words_main.cpp  bag_of_words_observation_model.cpp  bag_of_words_observation_model.h  command_line.cpp  command_line.h  dialogue_irl_main.cpp  observation_model.cpp  observation_model.h  oracle_irl_main.cpp  pomdp_run_main.cpp  roscpp_param_patch.h
src/pomdp_node/src/pomdp_node/: __init__.py  default.py
src/pomdp_node/srv/: alpha_policy.srv  dialogue_irl.srv  estimate_action.srv  lookup_trans_prob.srv  mdp_policy.srv  oracle_irl.srv  update_belief.srv
src/pomdp_node/test/: 4x3.MDP  4x3.empty_mdp  4x3_fast.mdp_policy  4x4.empty_mdp  4x4.map_policy  4x4_ss.yaml  pomdp_run_4x3_fast.test  pomdp_run_4x3_fast_empty.test  pomdp_run_4x4_compound_state_space.test  test_dialogue_irl.py  test_oracle_irl.py  test_pomdp_run.py  testcase_dialogue_irl_tiger.txt  testcase_oracle_irl_tiger.txt  tiger_cautious.alpha  tiger_compound.mn_pomdp_policy  tiger_impatient.alpha  tiger_more_cautious.alpha  tiger_reckless.alpha
src/pomdp_node/test/dialogue_tiger/: a0_listen.txt  a1_open-left.txt  a2_open-right.txt  dialogue_cfg.yaml
