<?xml version="1.0"?>
<package>
  <name>pomdp_node</name>
  <version>0.0.0</version>
  <description>The pomdp_node package</description>

  <maintainer email="badkins@usc.edu">Bea Adkins</maintainer>
  <license>TODO</license>
  <author  email="badkins@usc.edu">Bea Adkins</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <!--build_depend>mdp</build_depend--> <!-- Need to figure out how to do compile-yourself package. -->
  <build_depend>boost</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <test_depend>rostest</test_depend>

 <!--
    pomdp-solve-5.3
     > libmdp.a
     > liblpk.a
     > liblaspack.a

-->


  <export>
    <rosdoc config="doc/rosdoc.yaml" />
  </export>
</package>